tests/spec/fail/match_default_not_last.aja
match 1:
    default:
        print("x")
    case 1:
        print("y")
